<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@+id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.example.analyticsapp.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment">

        <action
        android:id="@+id/next_action"
        app:destination="@+id/flow_step_one_dest"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/flow_step_one_dest"
        android:label="@string/step_one"
        android:name="com.example.analyticsapp.flow.FlowStepFragment"
        tools:layout="@layout/flow_step_one_fragment">

        <argument
            android:name="flowStepNumber"
            android:defaultValue="1"
            app:argType="integer"/>

        <action
            android:id="@+id/next_action"
            app:destination="@+id/flow_step_two_dest">
        </action>
    </fragment>

    <fragment
        android:id="@+id/flow_step_two_dest"
        android:label="@string/step_two"
        android:name="com.example.analyticsapp.flow.FlowStepFragment"
        tools:layout="@layout/flow_step_two_fragment">

        <argument
            android:name="flowStepNumber"
            android:defaultValue="2"
            app:argType="integer"/>

        <action
            android:id="@+id/next_action"
            app:popUpTo="@id/home_dest">
        </action>
    </fragment>

    <fragment
        android:id="@+id/settings_dest"
        android:name="com.example.analyticsapp.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment"/>

    <fragment
        android:id="@+id/shopping_dest"
        android:name="com.example.analyticsapp.shopping.ShoppingFragment"
        android:label="@string/shopping"
        tools:layout="@layout/shopping_fragment"/>

    <fragment
        android:id="@+id/notification_dest"
        android:name="com.example.analyticsapp.notification.NotificationFragment"
        android:label="@string/deeplink"
        tools:layout="@layout/notification_fragment">

        <argument
            android:name="myarg"
            android:defaultValue="Notification Title"/>

    </fragment>


</navigation>
